--- a/react-music/package.json
+++ b/react-music/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "better-scroll": "1.5.5",
+    "jsonp": "^0.2.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-transition-group": "^2.4.0",
+    "redux": "^4.0.0",
+    "swiper": "3.4.2"
   },
   "scripts": {
     "start": "node script/customized-build start",
